fix: adjust viewport metadata to provide a more consistent on iphone

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,12 @@
       background-color: #171725;
     }
   }
+
+  @media screen and (max-width: 768px) { // Helps control small viewport device behaviour in a predictable way
+body {
+    min-height: 1240px;
+}
+}
   
 
   /* Headings default to semibold weight where there is multiple weights. Body and Subheadings default to regular */
